{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 20,
  "lineage": "7269839d-84ab-a811-3517-9fe336e61299",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e04c59720dc290a",
            "domain": "vpc",
            "id": "eipalloc-08e04c59720dc290a",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-176-172-51.us-west-1.compute.amazonaws.com",
            "public_ip": "54.176.172.51",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:116194731768:internet-gateway/igw-0a0d4e2c26ebb5b77",
            "id": "igw-0a0d4e2c26ebb5b77",
            "owner_id": "116194731768",
            "tags": {
              "Name": "iti_lab1_internet_gw"
            },
            "tags_all": {
              "Name": "iti_lab1_internet_gw"
            },
            "vpc_id": "vpc-048d25575a033b20a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e04c59720dc290a",
            "connectivity_type": "public",
            "id": "nat-0283cfbf7afc97f88",
            "network_interface_id": "eni-04d956e00967a4169",
            "private_ip": "10.0.0.28",
            "public_ip": "54.176.172.51",
            "subnet_id": "subnet-029884be240be6848",
            "tags": {
              "Name": "iti_lab1_gw_nat1"
            },
            "tags_all": {
              "Name": "iti_lab1_gw_nat1"
            }
          },
          "dependencies": [
            "aws_eip.main",
            "aws_internet_gateway.main_internet_gw",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:116194731768:route-table/rtb-0bffd7662a4ee7bdb",
            "id": "rtb-0bffd7662a4ee7bdb",
            "owner_id": "116194731768",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0283cfbf7afc97f88",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iti_lab1_private_rt_NAT"
            },
            "tags_all": {
              "Name": "iti_lab1_private_rt_NAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-048d25575a033b20a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main",
            "aws_internet_gateway.main_internet_gw",
            "aws_nat_gateway.nat1",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:116194731768:route-table/rtb-07d23bb37f0d76fe2",
            "id": "rtb-07d23bb37f0d76fe2",
            "owner_id": "116194731768",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a0d4e2c26ebb5b77",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iti_lab1_public_rt"
            },
            "tags_all": {
              "Name": "iti_lab1_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-048d25575a033b20a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_internet_gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pure_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:116194731768:route-table/rtb-0101b63d4700bf894",
            "id": "rtb-0101b63d4700bf894",
            "owner_id": "116194731768",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "iti_lab1_private_rt"
            },
            "tags_all": {
              "Name": "iti_lab1_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-048d25575a033b20a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1cc05cc946b677c",
            "route_table_id": "rtb-0bffd7662a4ee7bdb",
            "subnet_id": "subnet-0bbe2283ccf210fa6"
          },
          "dependencies": [
            "aws_eip.main",
            "aws_internet_gateway.main_internet_gw",
            "aws_nat_gateway.nat1",
            "aws_route_table.private_rt_NAT",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02db14c264e207428",
            "route_table_id": "rtb-0bffd7662a4ee7bdb",
            "subnet_id": "subnet-00d514ce3f4affd55"
          },
          "dependencies": [
            "aws_eip.main",
            "aws_internet_gateway.main_internet_gw",
            "aws_nat_gateway.nat1",
            "aws_route_table.private_rt_NAT",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a6cd48a77b92fbe",
            "route_table_id": "rtb-07d23bb37f0d76fe2",
            "subnet_id": "subnet-029884be240be6848"
          },
          "dependencies": [
            "aws_internet_gateway.main_internet_gw",
            "aws_route_table.public_rt",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0801a4383acdc6cbb",
            "route_table_id": "rtb-07d23bb37f0d76fe2",
            "subnet_id": "subnet-0d9d6fcb9883a6dbc"
          },
          "dependencies": [
            "aws_internet_gateway.main_internet_gw",
            "aws_route_table.public_rt",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pure_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027d1c66b1bfa1c0a",
            "route_table_id": "rtb-0101b63d4700bf894",
            "subnet_id": "subnet-04bc8264cb3e0ac3c"
          },
          "dependencies": [
            "aws_route_table.pure_private_rt",
            "aws_subnet.pure_private1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pure_private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0baf7bfd65e75c0d7",
            "route_table_id": "rtb-0101b63d4700bf894",
            "subnet_id": "subnet-09298195061b10448"
          },
          "dependencies": [
            "aws_route_table.pure_private_rt",
            "aws_subnet.pure_private2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:116194731768:subnet/subnet-0bbe2283ccf210fa6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0bbe2283ccf210fa6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116194731768",
            "tags": {
              "Name": "iti_lab1_subnet_private1_NAT"
            },
            "tags_all": {
              "Name": "iti_lab1_subnet_private1_NAT"
            },
            "vpc_id": "vpc-048d25575a033b20a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:116194731768:subnet/subnet-00d514ce3f4affd55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-00d514ce3f4affd55",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116194731768",
            "tags": {
              "Name": "iti_lab1_subnet_private1_NAT"
            },
            "tags_all": {
              "Name": "iti_lab1_subnet_private1_NAT"
            },
            "vpc_id": "vpc-048d25575a033b20a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:116194731768:subnet/subnet-029884be240be6848",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-029884be240be6848",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116194731768",
            "tags": {
              "Name": "iti_lab1_subnet_public1"
            },
            "tags_all": {
              "Name": "iti_lab1_subnet_public1"
            },
            "vpc_id": "vpc-048d25575a033b20a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:116194731768:subnet/subnet-0d9d6fcb9883a6dbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d9d6fcb9883a6dbc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116194731768",
            "tags": {
              "Name": "iti_lab1_subnet_public2"
            },
            "tags_all": {
              "Name": "iti_lab1_subnet_public2"
            },
            "vpc_id": "vpc-048d25575a033b20a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pure_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:116194731768:subnet/subnet-04bc8264cb3e0ac3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-04bc8264cb3e0ac3c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116194731768",
            "tags": {
              "Name": "iti_lab1_subnet_pure_private1"
            },
            "tags_all": {
              "Name": "iti_lab1_subnet_pure_private1"
            },
            "vpc_id": "vpc-048d25575a033b20a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pure_private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:116194731768:subnet/subnet-09298195061b10448",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-09298195061b10448",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116194731768",
            "tags": {
              "Name": "iti_lab1_subnet_pure_private2"
            },
            "tags_all": {
              "Name": "iti_lab1_subnet_pure_private2"
            },
            "vpc_id": "vpc-048d25575a033b20a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:116194731768:vpc/vpc-048d25575a033b20a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b90dbb961d0ecb8b",
            "default_route_table_id": "rtb-08cde96c43b5e7d29",
            "default_security_group_id": "sg-0d683956bc236cefa",
            "dhcp_options_id": "dopt-03b26cfcb9fc57ae0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-048d25575a033b20a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08cde96c43b5e7d29",
            "owner_id": "116194731768",
            "tags": {
              "Name": "iti_lab1_vpc"
            },
            "tags_all": {
              "Name": "iti_lab1_vpc"
            }
          }
        }
      ]
    }
  ]
}